@@ -1,66 +1,0 @@
-<oaf_info>
-
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Elm_Intelligent_Importer:@VERSION@"
-	    type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_Factory:@VERSION@">
-
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/IntelligentImporter:@VERSION@"/>
-	</oaf_attribute>
-
-	<oaf_attribute name="name" type="string"
-		       _value="Evolution Elm importer"/>
-</oaf_server>
-
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Mbox_Importer:@VERSION@"
-	    type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_Factory:@VERSION@">
-
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/Importer:@VERSION@"/>
-	</oaf_attribute>
-
-	<oaf_attribute name="evolution:menu_name" type="string"
-		       _value="MBox (mbox)"/>
-	<oaf_attribute name="name" type="string"
-		       _value="Evolution mbox importer"/>
-</oaf_server>
-
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Netscape_Intelligent_Importer:@VERSION@"
-	    type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_Factory:@VERSION@">
-
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/IntelligentImporter:@VERSION@"/>
-	</oaf_attribute>
-
-	<oaf_attribute name="name" type="string"
-		       _value="Evolution Netscape Mail importer"/>
-</oaf_server>
-
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Outlook_Importer:@VERSION@"
-	    type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_Factory:@VERSION@">
-
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/Importer:@VERSION@"/>
-	</oaf_attribute>
-
-	<oaf_attribute name="evolution:menu_name" type="string"
-		       _value="Outlook Express 4 (.mbx)"/>
-	<oaf_attribute name="name" type="string"
-		       _value="Evolution Outlook Express 4 importer"/>
-</oaf_server>
-
-<oaf_server iid="OAFIID:GNOME_Evolution_Mail_Pine_Intelligent_Importer:@VERSION@"
-	    type="factory"
-	    location="OAFIID:GNOME_Evolution_Mail_Factory:@VERSION@">
-
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/IntelligentImporter:@VERSION@"/>
-	</oaf_attribute>
-
-	<oaf_attribute name="name" type="string"
-		       _value="Evolution Pine importer"/>
-</oaf_server>
-</oaf_info>
