@@ -35,9 +35,6 @@
 
 #include <glib.h>
 #include <glib/gi18n.h>
-#include <gtk/gtkdialog.h>
-#include <gtk/gtkprogressbar.h>
-#include <gtk/gtklabel.h>
 #include <gtk/gtkvbox.h>
 #include <gtk/gtkcheckbutton.h>
 
@@ -64,10 +61,6 @@ struct _elm_import_msg {
 	int status_pc;
 	int status_timeout_id;
 	CamelOperation *status;
-
-	GtkWidget *dialog;
-	GtkWidget *label;
-	GtkWidget *progressbar;
 };
 
 static GHashTable *
@@ -240,10 +233,6 @@ elm_import_imported(struct _mail_msg *mm)
 		g_object_unref(gconf);
 	}
 
-	if (m->dialog)
-		gtk_widget_destroy(m->dialog);
-	m->dialog = NULL;
-
 	e_import_complete(m->import, (EImportTarget *)m->target);
 }
 
@@ -253,9 +242,6 @@ elm_import_free(struct _mail_msg *mm)
 	struct _elm_import_msg *m = (struct _elm_import_msg *)mm;
 
 	camel_operation_unref(m->status);
-
-	if (m->dialog)
-		gtk_widget_destroy(m->dialog);
 
 	g_free(m->status_what);
 	g_mutex_free(m->status_lock);
@@ -290,26 +276,17 @@ elm_status_timeout(void *data)
 	int pc;
 	char *what;
 
-	if (!importer->status_what)
-		return TRUE;
+	if (importer->status_what) {
+		g_mutex_lock(importer->status_lock);
+		what = importer->status_what;
+		importer->status_what = NULL;
+		pc = importer->status_pc;
+		g_mutex_unlock(importer->status_lock);
 
-	g_mutex_lock(importer->status_lock);
-	what = importer->status_what;
-	importer->status_what = NULL;
-	pc = importer->status_pc;
-	g_mutex_unlock(importer->status_lock);
+		e_import_status(importer->import, (EImportTarget *)importer->target, what, pc);
+	}
 
-	gtk_progress_bar_set_fraction((GtkProgressBar *)importer->progressbar, (gfloat)(pc/100.0));
-	gtk_progress_bar_set_text((GtkProgressBar *)importer->progressbar, what);
-	
 	return TRUE;
-}
-
-static void
-dialog_response(GtkDialog *d, guint button, struct _elm_import_msg *m)
-{
-	if (button == GTK_RESPONSE_CANCEL)
-		camel_operation_cancel(m->status);
 }
 
 static struct _mail_msg_op elm_import_op = {
@@ -326,17 +303,10 @@ mail_importer_elm_import(EImport *ei, EImportTarget *target)
 	int id;
 
 	m = mail_msg_new(&elm_import_op, NULL, sizeof (*m));
+	g_datalist_set_data(&target->data, "elm-msg", m);
 	m->import = ei;
 	g_object_ref(m->import);
 	m->target = (EImportTargetHome *)target;
-
-	m->dialog = e_error_new(NULL, "mail:importing", _("Evolution is importing your old Elm mail"), NULL);
-	g_signal_connect(m->dialog, "response", G_CALLBACK(dialog_response), m);
-	m->label = gtk_label_new(_("Please wait"));
-	m->progressbar = gtk_progress_bar_new();
-	gtk_box_pack_start(GTK_BOX(((GtkDialog *)m->dialog)->vbox), m->label, FALSE, FALSE, 0);
-	gtk_box_pack_start(GTK_BOX(((GtkDialog *)m->dialog)->vbox), m->progressbar, FALSE, FALSE, 0);
-	gtk_widget_show_all(m->dialog);
 	m->status_timeout_id = g_timeout_add(100, elm_status_timeout, m);
 	m->status_lock = g_mutex_new();
 	m->status = camel_operation_new(elm_status, m);
@@ -388,12 +358,22 @@ elm_import(EImport *ei, EImportTarget *target, EImportImporter *im)
 		e_import_complete(ei, target);
 }
 
+static void
+elm_cancel(EImport *ei, EImportTarget *target, EImportImporter *im)
+{
+	struct _elm_import_msg *m = g_datalist_get_data(&target->data, "elm-msg");
+
+	if (m)
+		camel_operation_cancel(m->status);
+}
+
 static EImportImporter elm_importer = {
 	E_IMPORT_TARGET_HOME,
 	0,
 	elm_supported,
 	elm_getwidget,
 	elm_import,
+	elm_cancel,
 };
 
 EImportImporter *
